[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Clock/Clock.tscn" type="PackedScene" id=1]
[ext_resource path="res://theme/digits_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/TaskControl/TaskControl.gd" type="Script" id=4]

[node name="TaskControl" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -65.0
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 130, 130 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
task_options = [ "1 L", "5 L", "25 L" ]

[node name="TaskLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 31.0
margin_right = 65.0
margin_bottom = 45.0
grow_horizontal = 2
rect_min_size = Vector2( 130, 0 )
text = "Task Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -14.0
margin_right = 69.0
margin_bottom = 14.0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TaskClock" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
clock_color = Color( 0, 0, 0, 0.219608 )
shadow_color = Color( 1, 1, 1, 0 )
wait_time = 5.0

[node name="TaskQuantity" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -24.0
margin_right = 64.0
margin_bottom = 24.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "0.0 L"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="TaskClock" to="." method="_on_TaskClock_timeout"]
